Updated title and description

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio website of Yousif Ahmed. A summary of professional experience, 
-      skills, projects details and contact information."
+      content="اهلا بك في موقع الطالب يوسف احمد , تم صنعه خصيصا لورشة تدريب برمجيات الحاسوب"
     />
     <title>Yousif Ahmed - Portfolio</title>
 
@@ -21,16 +20,14 @@
     <meta property="og:image" content="/assets/img/PwaImages/ios/512.png" />
     <meta
       property="og:description"
-      content="Portfolio website of Yousif Ahmed. A summary of professional experience, 
-      skills, projects details and contact information."
+      content="اهلا بك في موقع الطالب يوسف احمد , تم صنعه خصيصا لورشة تدريب برمجيات الحاسوب"
     />
 
     <!--==================== TWITTER META TAGS ===================== -->
     <meta name="twitter:title" content="Yousif Ahmed - Portfolio" />
     <meta
       name="twitter:description"
-      content="Portfolio website of Yousif Ahmed. A summary of professional experience, 
-      skills, projects details and contact information."
+      content="اهلا بك في موقع الطالب يوسف احمد , تم صنعه خصيصا لورشة تدريب برمجيات الحاسوب"
     />
     <meta name="twitter:image" content="/assets/img/PwaImages/ios/512.png" />
 
