Updated title and description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="اهلا بك في موقع الطالب يوسف احمد , تم صنعه خصيصا لورشة تدريب برمجيات الحاسوب"
     />
-    <title>Yousif Ahmed - Portfolio</title>
+    <title>Yousif Ahmed - doksha</title>
 
     <link
   rel="stylesheet"
@@ -16,7 +16,7 @@
 
 
     <!--==================== OPEN GRAPH META TAGS ===================== -->
-    <meta property="og:title" content="Yousif Ahmed - Portfolio" />
+    <meta property="og:title" content="Yousif Ahmed - doksha" />
     <meta property="og:image" content="/assets/img/PwaImages/ios/512.png" />
     <meta
       property="og:description"
@@ -24,7 +24,7 @@
     />
 
     <!--==================== TWITTER META TAGS ===================== -->
-    <meta name="twitter:title" content="Yousif Ahmed - Portfolio" />
+    <meta name="twitter:title" content="Yousif Ahmed - doksha" />
     <meta
       name="twitter:description"
       content="اهلا بك في موقع الطالب يوسف احمد , تم صنعه خصيصا لورشة تدريب برمجيات الحاسوب"
