Add Tailwind dark mode support to HTML

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
-  <body>
+  <body class="bg-white text-black dark:bg-black dark:text-white">
     <!-- ===================== LOADER ==================== -->
     <div id="loading">
       <div class="loader"><span><</span><span>/></span></div>
     </div>
 
     <!--==================== HEADER ====================-->
-    <header class="header" id="header">
+    <header class="header bg-white dark:bg-gray-900 dark:text-white" id="header">
       <nav class="nav container">
         <a href="#" class="nav__logo noSelect">Yousif Ahmed</a>
 
@@ -575,7 +575,7 @@
 <!--==================== FOOTER ====================-->
 
 <footer class="footer">
-  <div class="footer__bg">
+  <div class="footer__bg bg-gray-100 dark:bg-gray-800 dark:text-white">
     <div class="footer__container container grid">
       <div>
         <h1 class="footer__title">Yousif Ahmed</h1>
